kube/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-app
  labels:
    app: golang-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: golang-app
  template:
    metadata:
      labels:
        app: golang-app
    spec:
      containers:
      - name: golang-app
        image: kwrzyszcz/argo_backend:0.1.0
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1001
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: go-app-svc
spec:
  selector:
    app: golang-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
