kube/deployment-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  labels:
    app: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: react-app
        image: kwrzyszcz/argo_frontend:b10df8e55fc1ee8ea59dc2903b853933a9ff9ee7
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: front-app-svc
spec:
  selector:
    app: react-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
