kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: go-example.com # add it to /etc/hosts with minikube ingress IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-app-svc
            port:
              number: 3000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: go-app-svc
            port:
              number: 8000
